// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering names the tests a killed shard never got to 1`] = `
"**1 did not run · 1 passed**

|  | Test | Shard | Attempts | Time |
| :-- | :-- | --: | --: | --: |
| 🚫 | \`settings/ManualBackup\` | 1 |  |  |
| ✅ | \`screens/Home\` | 1 | 1 | 1m 14s |

"
`;

exports[`rendering reports an all-green run 1`] = `
"**2 passed**

|  | Test | Shard | Attempts | Time |
| :-- | :-- | --: | --: | --: |
| ✅ | \`onboarding/CreateWallet\` | 1 | 1 | 2m 12s |
| ✅ | \`screens/Home\` | 1 | 1 | 1m 14s |

"
`;

exports[`rendering says so plainly when no shard reported anything 1`] = `
"No e2e results were reported. Look into the shard jobs instead.

"
`;

exports[`rendering skips a half-written row without losing the rest of the file 1`] = `
"**1 passed**

|  | Test | Shard | Attempts | Time |
| :-- | :-- | --: | --: | --: |
| ✅ | \`screens/Home\` | 1 | 1 | 1m 14s |

"
`;

exports[`rendering sorts failures and retries above passes, merging every shard file 1`] = `
"**1 failed · 1 retried · 1 passed**

|  | Test | Shard | Attempts | Time |
| :-- | :-- | --: | --: | --: |
| ❌ | \`transactions/WrapTransaction\` | 2 | 3 | 4m 12s |
| ⚠️ | \`cash/SetupResume\` | 1 | 2 | 2m 07s |
| ✅ | \`screens/Home\` | 2 | 1 | 40s |

"
`;

exports[`shards that never reported lists every missing shard when more than one is gone 1`] = `
"**3 did not report · 1 passed**

> [!WARNING]
> Shards 1, 3, 4 uploaded nothing, so their tests are missing from this table entirely.

|  | Test | Shard | Attempts | Time |
| :-- | :-- | --: | --: | --: |
| ❓ | _no results uploaded_ | 1 |  |  |
| ❓ | _no results uploaded_ | 3 |  |  |
| ❓ | _no results uploaded_ | 4 |  |  |
| ✅ | \`screens/Home\` | 2 | 1 | 1m 14s |

"
`;

exports[`shards that never reported names the shard whose ledger never arrived, and warns the table is partial 1`] = `
"**1 did not report · 2 passed**

> [!WARNING]
> Shard 3 uploaded nothing, so its tests are missing from this table entirely.

|  | Test | Shard | Attempts | Time |
| :-- | :-- | --: | --: | --: |
| ❓ | _no results uploaded_ | 3 |  |  |
| ✅ | \`cash/SetupResume\` | 2 | 1 | 1m 31s |
| ✅ | \`screens/Home\` | 1 | 1 | 1m 14s |

"
`;

exports[`shards that never reported treats an empty ledger as having reported, since the shard wrote it before running anything 1`] = `
"**1 passed**

|  | Test | Shard | Attempts | Time |
| :-- | :-- | --: | --: | --: |
| ✅ | \`screens/Home\` | 1 | 1 | 1m 14s |

"
`;
